--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
         </div>
         <div class="navbar__s3">
             <p>Courses</p>
+                        <div class="mylearning">
+                <p>My Learning</p>
+                <div class="mylearning__popup">
+                    <p>It appears you haven't purchased any</p>
+                </div>
+
+            </div>
+
             <p>My Learning</p>
             <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
             <i class="fa-solid fa-bell" style="color: #000000;"></i>
@@ -43,8 +51,13 @@
         <p>Marketing</p>
     </div>
     <div class="Ad-section">
-        <img src="./images/adsection.jpg" alt="Advertisement">
+                <img src="./images/adsection.jpg" alt="Advertisement">
+        <div class="Ad-section__offer">
+            <h2><strong>Udemy Limited Deal! Ends in</strong> <span id="countdown"></span> </h2>
+            <p>Access the top-rated courses with 30% off.</p>
     </div>
+        </div>
+
 
     <div class="recommended">
         <h1 class="recommended__title"> Recommended for you</h1>
@@ -205,3 +218,30 @@
 </body>
 
 </html>
+<script>
+    // Set countdown duration (24 hours from the moment user opens the page)
+    const countdownTime = new Date().getTime() + (24 * 60 * 60 * 1000);
+
+    const countdownElement = document.getElementById("countdown");
+
+    const updateCountdown = () => {
+        const now = new Date().getTime();
+        const distance = countdownTime - now;
+
+        if (distance <= 0) {
+            countdownElement.innerHTML = "00h 00m 00s";
+            clearInterval(timer);
+            return;
+        }
+
+        const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+        countdownElement.innerHTML =
+            `${String(hours).padStart(2, '0')}h ${String(minutes).padStart(2, '0')}m ${String(seconds).padStart(2, '0')}s`;
+    };
+
+    const timer = setInterval(updateCountdown, 1000);
+    updateCountdown(); // Call immediately on load
+</script>
