--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
             </div>
 
-            <p>My Learning</p>
             <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
             <i class="fa-solid fa-bell" style="color: #000000;"></i>
             <i class="fa-solid fa-user" style="color: #000000;"></i>
@@ -215,9 +214,30 @@
 
     </div>
 
+    <div id="chat-button">🤖</div>
+
+    <div id="chat-popup">
+        <div class="chat-headrer">Virtual Assitant</div>
+        <div class="chat-body">
+            <p>Hi there! How can I help you today?</p>
+        </div>
+        <input type="text" placeholder="Type a message.." class="chat-input"> 
+    </div>
+
 </body>
 
 </html>
+ /* Virtual Assitant */
+ <script>
+    const chatBtn = document.getElementById("chat-button");
+    const chatPopup = document.getElementById("chat-popup");
+
+    chatBtn.addEventListener("click", () => {
+        chatPopup.style.display =
+        chatPopup.style.display === "block" ? "none" : "block";
+    });
+ </script>
+
 <script>
     // Set countdown duration (24 hours from the moment user opens the page)
     const countdownTime = new Date().getTime() + (24 * 60 * 60 * 1000);
